Add resume links

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>www.deepakkumar.tech</title>
+	<link rel="icon" type="image/png" href="favicon.png" sizes="32x32" />
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
@@ -59,6 +60,28 @@
 					</ul>
 				</div>
 				<hr class="d-sm-none">
+				<div class="col-12 social-tab px-5 left-panel-section">
+					<span class="f2 ta-center main-heading transform-upper letter-spacing">Resume</span>
+					<div class="row">
+						<div class="offset-2 col-4 pb-2">
+							<a target="_blank" href="https://www.dropbox.com/s/xal81uw7f44tki5/DeepakResume.pdf?dl=0" title="">
+								<div class="resume-icon">
+									<i class="fa fa-file-pdf-o"></i>
+									<span class="f3">pdf</span>
+								</div>
+							</a>
+						</div>
+						<div class="col-4 pb-2">
+							<a target="_blank" href="https://www.dropbox.com/s/b7n7rkrnx8u3p3m/DeepakResume.docx?dl=0" title="">
+								<div class="resume-icon">
+									<i class="fa fa-file-text-o"></i>
+									<span class="f3">text</span>
+								</div>
+							</a>
+						</div>
+					</div>
+				</div>
+				<hr class="d-sm-none">
 				<div class="col-12 work-skills px-5 left-panel-section">
 					<span class="f2 ta-center main-heading transform-upper letter-spacing">Work Skills</span>
 					<div class="f3 intro-tab-content skillTemplate"></div>
@@ -79,7 +102,9 @@
 							</span>
 							<div class="work-ex-heading">
 								<span class="f2 d-block">Software Developer | Oct/2016 - Present</span>
-								<span class="f3 d-block font-italic text-muted"><strong>Janison Education Group</strong></span>
+								<a target="_blank" href="http://janison.com/" title="">
+									<span class="f3 d-block font-italic text-muted"><strong>Janison Education Group</strong></span>
+								</a>
 							</div>
 							<div class="f3 work-ex-body pt-2 ta-justify">
 								<p>Joined the company to work on crucial part of reports download and background sync processes to assess writing tests. Main responsibilities include build new features and support older functionalities.</p>
@@ -92,7 +117,9 @@
 							</span>
 							<div class="work-ex-heading">
 								<span class="f2 d-block">Software Developer | 2011 - 2016</span>
-								<span class="f3 d-block font-italic text-muted"><strong>Sapient Consulting</strong></span>
+								<a target="_blank" href="https://www.sapientconsulting.com/" title="">
+									<span class="f3 d-block font-italic text-muted"><strong>Sapient Consulting</strong></span>
+								</a>
 							</div>
 							<div class="f3 work-ex-body pt-2 ta-justify">
 								<p>Worked on variety of projects spread across different domains like Sports, FMCG, Human Resources. Migrated legacy classic Asp application to Asp.Net MVC platform Active Directory (AD) Authentication mechanism used to make the login process smooth for the application users. Written Microsoft Unit Tests to automate the regression testing of back end logic upto some extent. It reduced the testing efforts by 25%. Used OOPS concepts to create common components in ASP.NET MVC business layer to handle similar operations for 9 different functional pages. It reduced lines of code upto 45%.</p>
