--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>www.deepakkumar.tech</title>
-	<link rel="icon" type="image/png" href="favicon.ico" sizes="32x32" />
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
