profile picture change

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="container-fluid navbar-container justify-content-center px-0 py-4">
 			<div class="col-12 col-sm-5 navbar-brand d-block px-0 mx-0 ">
 				<div>
-					<img class="heading-img rounded-circle" src="img/profile1.png" alt="">  
+					<img class="heading-img rounded-circle" src="img/profile2.jpg" alt="">  
 				</div>
 			</div>
 			<div class="col-sm-7 px-0">
